Add integration tests for getDish and getOwnDishes, fix updateDish/removeDish